re PR tree-optimization/30984 (ICE with computed goto and constants)

2007-03-19  Jeff Law  <law@redhat.com>

        * tree-cfg.c (find_taken_edge): Tighten conditions for
        optimizing computed gotos.

2007-03-19  Jeff Law  <law@redhat.com>

        * PR tree-optimization/30984
        * gcc.c-torture/pr30984.c: New test.

From-SVN: r123068